[gd_scene load_steps=8 format=3 uid="uid://bdj68j7nw00xj"]

[ext_resource type="Script" uid="uid://fu27o4uu66ks" path="res://player.gd" id="1_i3pqv"]
[ext_resource type="Texture2D" uid="uid://dcdf3tn1fv4nr" path="res://assets/player.png" id="2_i3pqv"]
[ext_resource type="AudioStream" uid="uid://c21un0lwsonfe" path="res://assets/sfx/eat_planet_alt.wav" id="3_i3pqv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_onrkg"]
radius = 59.0085

[sub_resource type="Animation" id="Animation_i3pqv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_onrkg"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Overlay:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hqtel"]
_data = {
&"RESET": SubResource("Animation_i3pqv"),
&"fade_out": SubResource("Animation_onrkg")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
motion_mode = 1
script = ExtResource("1_i3pqv")

[node name="Core" type="Sprite2D" parent="."]
texture = ExtResource("2_i3pqv")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_onrkg")

[node name="Overlay" type="ColorRect" parent="."]
z_index = 2
offset_left = -2019.0
offset_top = -1666.0
offset_right = -865.0
offset_bottom = -1016.0
scale = Vector2(3.46838, 5.17262)
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hqtel")
}

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_i3pqv")

[node name="DeathTimer" type="Timer" parent="."]

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
